    * option to specify default search engine used in locationbar
    * option to disable search suggestions in websearchbar
    * option to search only whole words in source viewer
    * option to hide reload/stop buttons in navigationbar
    * option to disable alt/ctrl + numbers shortcuts
    * option to switch to tab from locationbar popup completer
    * use .qupzilla/tmp instead of /tmp for temporary data
    * saving passwords should now work for much more sites
    * don't steal Ctrl+B/U/I shortcuts from page
    * disabled by default opacity effect on tab previews - see BUILDING
    * improved showing navigation toolbar in fullscreen
    * fixed scrolling to anchor in background tabs
    * fixed parsing UTF-8 filenames in Content-Disposition header
    * fixed crash with context menu in websearchbar and locationbar
    * fixed loading NYTimes skimmer page
    * fixed cookie domain handling according to RFC 6265
    * fixed qvalue format in Accept-Language HTTP header
    * fixed sorting files case insensitively in file scheme handler
    * fixed possible crash in saving page screen of a really long page
    * X11: fixed Ctrl+Q shortcut for DEs other than KDE and Gnome
    * windows: improved installer allows registering as default web browser
    * windows: check and set as default browser from preferences
    * mac: fixed not working global menu after closing browser window

Version 1.3.5
    * released 16 September 2012
    * new Persian translation
    * option to remove web search bar
    * warning user when removing page from speed dial
    * option to align pages to center in speed dial
    * added shortcut for Clear private data
    * new options in AdBlock menu to disable it for domain and for single page
    * added option to disable search suggestions in search bar
    * added option to choose what to suggest in address bar
    * Save x as ... actions will always show file dialog